--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.0.3",
+    "git-commit-msg-linter": "^4.1.3",
+    "typescript": "^4.7.4"
+  }
 }
