--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.3",
+    "husky": "^4.3.8",
+    "lint-staged": "^9.5.0",
     "typescript": "^4.7.4"
   }
 }
