--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^18.0.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -30,6 +31,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.7.0"
   }
 }
