--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.0.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "dotenv": "^16.0.1",
     "eslint": "^8.19.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-import": "^2.26.0",
