--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-URI = mongodb://localhost:2717/tasks
-DB =
+URI = mongodb+srv://booleano:iqKB86axyeGa2UWK@cluster0.uwpcm5v.mongodb.net/test
+DB =  TASKS_DB
+COLLECTION = tasks
 HOST =
-PASSWORD =
+PASSWORD = 
 USER =
 PORT = 3333
