chore: ensure package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --passWithNoTests --watch",
-    "test:staged": "jest --passWithNoTests"
+    "test:staged": "jest --passWithNoTests",
+    "dev": "node ./dist/src/main.js",
+    "start": "node ./dist/src/main.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
