chore: add Procfile

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "mamboo-test-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.ts",
   "scripts": {
     "test": "jest --passWithNoTests --watch",
     "test:staged": "jest --passWithNoTests",
-    "dev": "node ./dist/src/main.js",
-    "start": "node ./dist/src/main.js",
+    "dev": "node ./dist/main.js",
+    "start": "node dist/main.js",
     "build": "tsc"
   },
   "keywords": [],
