--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/node": "^18.0.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "dotenv": "^16.0.1",
     "eslint": "^8.19.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -36,6 +35,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.7.0",
+    "dotenv": "^16.0.1"
   }
 }
