--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:staged": "jest --passWithNoTests",
     "dev": "node ./dist/main.js",
     "start": "node dist/main.js",
-    "build": "tsc"
+    "build": "tsc",
+    "heroku-postbuild": "npm run build && npm install && npm install --only=dev --no-shrinkwrap"
   },
   "keywords": [],
   "author": "",
